2006-06-17 06:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Added code to clear changes
	so that the nib loads without showing the document as changed.
	Also added code to correct the missing colon in some nib files
	for certain methods so that connections are correctly made.
	* Resources/ClassInformation.plist: Addition of missing methods on
	NSFirst.

2006-06-17 06:25 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Fix for connections to NSOwner.

2006-06-15 00:48 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GModelDecoder.m: Removed old class.
	* GormCore/GNUmakefile: Added new GormGModelWrapperLoader class
	* GormCore/GormClassManager.m: Minor cleanup
	* GormCore/GormDocument.m: Temporarily comment out release of file
	prefs window.
	* GormCore/GormGModelWrapperLoader.m: new loader class for GModel.
	* GormCore/GormNibWrapperLoader.m: Minor cleanup
	* GormInfo.plist: Added GModel entry back in and made both GModel
	and Nib "Viewer" entries.

2006-06-14 22:45 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.[hm]: Added new deactivateEditors and
	reactivateEditors methods.
	* GormCore/GormGormWrapperBuilder.m: Moved connection
	name/object swap here for gorm format.
	* Gorm.m: Calling new deactivate/reactivateEditors

2006-06-14 01:42 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Addition of GormNibWrapperLoader to the
	makefile.
	* GormCore/GormClassManager.[hm]: Correction for nib classes loading.
	* GormCore/GormDocument.h:  Added include for GSNibContainer
	* GormCore/GormDocument.m: In NSNibConnector category which 
	implements "isEqual" check if it's the same "kind of class".  If
	not return NO.
	* GormCore/GormGormWrapperBuilder.m: Corrections for connection
	persistence issues.
	* GormCore/GormGormWrapperLoader.m: Corrections for connection
	persistence issues.