@@ -139,6 +139,7 @@ static NSImage *horizontalImage;
 	}
       else if ([[superview window] contentView] == _editedObject) 
 	{
+	  [self setFrame: [_editedObject frame]];
 	  [[superview window] setContentView: self];
 	}
       else if ([superview isKindOfClass: [NSClipView class]])
